k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: taskflow
spec:
  replicas: 1

  selector:
    matchLabels:
      app: taskflow

  template:
    metadata:
      labels:
        app: taskflow

    spec:
      containers:
        - name: taskflow
          image: taskflow:1.0
          imagePullPolicy: Never
          ports:
            - containerPort: 10000
